cluster-addons/order-matcher-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-matcher-headless
  namespace: traderx
  labels:
    app: order-matcher
spec:
  clusterIP: None
  selector:
    app: order-matcher
  ports:
    - name: http
      port: 18110
      targetPort: 18110
      protocol: TCP
