cluster-addons/order-matcher-primary-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app: order-matcher
  name: order-matcher-primary
  namespace: traderx
spec:
  ports:
  - name: http
    port: 18110
    protocol: TCP
    targetPort: 18110
  selector:
    app: order-matcher
    blp-role: primary
  type: ClusterIP
